updating links to the correct directory in the cart shopping and checkout pages

--- a/views/marketplace/cart_shopping.hbs
+++ b/views/marketplace/cart_shopping.hbs
@@ -84,6 +84,8 @@
             <div class="search-bar-container">
                 <div class="row py-2">
                     <div class="col col-12 col-lg-4">
+                        <a class="btn btn-primary" href="/marketplace" role="button"><i class="fa-solid fa-home"></i>
+                        </a>
                     </div>
                     <div class="col col-8 col-lg-4">
                         <form class="d-flex" role="search">
@@ -94,7 +96,7 @@
                         </form>
                     </div>
                     <div class="col col-4 text-end">
-                        <a class="btn btn-primary" href="cart_sopping.html" role="button"><i class="fa-solid fa-cart-shopping"></i>
+                        <a class="btn btn-primary" href="/marketplace/cart_shopping" role="button"><i class="fa-solid fa-cart-shopping"></i>
                             <span class="sopping-cart-text">Carrito</span></a>
                     </div>
                 </div>
