--- a/views/admin/products/orders.hbs
+++ b/views/admin/products/orders.hbs
@@ -263,7 +263,7 @@
                         <tbody class="table-group-divider">
                             {{#each orders}}
                             <tr class="">
-                                <td class="order align-middle white-space-nowrap"><a class="h5 color-primary text-primary fw-semi-bold" href="/admin/orders/details/{{id}}">#{{id}}</a>
+                                <td class="order align-middle white-space-nowrap"><a class="h5 color-primary text-primary fw-semi-bold" href="/admin/orders/details/{{id}}">#000000{{id}}</a>
                                 <td class="total align-middle fw-semi-bold text-1000">Bs. {{total_amount}}</td>
                                 <td class="align-middle white-space-nowrap ps-8">
                                     <a class=" align-items-center" href="/admin/edit_client/{{client_id}}">
