--- a/views/marketplace/market.hbs
+++ b/views/marketplace/market.hbs
@@ -110,7 +110,7 @@
 
                     <!-- cards part -->
 
-                    <div class="col col-12 col-lg-9">
+                    <div class="col col-12 col-lg-9 px-0">
                         <div class="container text-start">
                             {{#if message}}
                                 <div class="alert {{alertType}} alert-dismissible fade show" role="alert">
