--- a/public/css/styles_car_shopping.css
+++ b/public/css/styles_car_shopping.css
@@ -3,6 +3,20 @@ body {
     font-family: 'Montserrat', sans-serif;
 }
 
+/* getting rid of those arrow in the input number */
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox */
+/* input[type=number] {
+    -moz-appearance: textfield;
+} */
+
 h1 {
     font-size: 3.5rem;
     font-family: 'Montserrat', sans-serif;
