--- a/views/marketplace/cart_shopping.hbs
+++ b/views/marketplace/cart_shopping.hbs
@@ -78,74 +78,115 @@
             {{/if}}
             <div class="row">
                 <div class="col-12">
-                    <h2 class="text-start pb-3">Productos en el <strong>Carrito</strong></h2>
+                    <h2 class="text-start pb-3"><strong>Carrito</strong> de Compras</h2>
                 </div>
-                <div class="col col-12 col-lg-8">
-                    <div class="container-fluid">
+                
+
+                <div class="col-12 text-start">
+                    
+                </div>
+                <div class="col col-12 col-lg-8 text-start">
+                    <h6>DETALLES DEL PRODUCTO</h6>
+                    {{!-- <h4 class="">Su orden</h4>
+                     <div class="row ">
+                            <div class="col col-5 col-sm-7 px-0 text-start">
+                            </div> --}}
+                    <hr>
+                    <div class="container container-fluid px-0">
                         {{#if products}}
                             {{#each products}}
-                            <div class="row item">
-                                <div class="col col-5 col-sm-2 px-0">
+                            <div class="row ">
+                                <div class="col col-5 col-lg-2 pe-0 mb-3 mb-lg-0">
                                     <img class="item-img" src="{{img_dir}}" alt="">
                                 </div>
-                                <div class="col col-7 col-sm-5 my-auto">
-                                    <h2 class="">{{name}}</h2>
+                                <div class="col col-7 col-lg-4  ps-2 ps-sm-4 overflow-auto">
+                                    <h3 class="text-capitalize">{{name}}</h3>
                                 </div>
-                                <div class="col col-5 col-sm-2 my-auto py-3 py-sm-0">
-                                    <input name="product_id" type="number" value="{{id}}" class="d-none">
-                                    <input name="quantity" type="number" min="1" max="50" value="{{quantity}}">
+                                <div class="col col-4 col-lg-2 text-center">
+                                    <div class="row text-start">
+                                        <h6>Precio</h6>
+                                    </div>
+                                    <div class="row">
+                                        <h5 class="my-auto">{{price}} Bs</h4>
+                                    </div>
                                 </div>
-                                <div class="col col-5 col-sm-2 my-auto">
-                                    <p class="my-auto">{{price}} Bs</p>
+                                <div class="col col-4 col-lg-2 py-sm-0 px-0">
+                                    <div class="row text-start">
+                                        <h6>Cantidad</h6>
+                                    </div>
+                                    <div class="row ">
+                                        <input name="product_id" type="number" value="{{id}}" class="d-none">
+                                        {{!-- <input name="quantity" type="number" min="1" max="50" value="{{quantity} }"> --}} 
+                                        <div class="input-group py-auto my-auto text-center" bis_skin_checked="1">
+                                            <form action="/marketplace/cart_shopping/update_quantity" method="post">
+                                                <button style="min-width: 1rem" class="btn btn-decrement btn-outline-secondary px-2 px-sm-3" type="submit" name="action" value="decrement"><strong>−</strong></button>
+                                                <input type="number" inputmode="decimal" min="1" max="50" name="quantity" value="{{quantity}}" style="text-align: center; max-width: 4rem" class="form-control px-2 px-sm-2" placeholder="">
+                                                <button style="min-width: 1rem" class="btn btn-increment btn-outline-secondary px-2 px-sm-3" type="submit" name="action" value="increment"><strong>+</strong></button>
+                                            </form>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="col col-2 col-sm-1 my-auto">
-                                {{#if ../order}}
-                                    {{!-- <a href="/marketplace/product/cart_shopping/remove_product/{{id} }" ><i class="fa-solid fa-trash"></i></a> --}}
-                                {{else}}
-                                    <a href="/marketplace/product/cart_shopping/remove_product/{{id}}" ><i class="fa-solid fa-trash"></i></a>
-                                {{/if}}
+                                <div class="col col-4 col-lg-2 text-end">
+                                    <div class="row">
+                                        <h6>Total</h6>
+                                    </div>
+                                    <div class="row">
+                                        <h5 class="my-auto">{{price}} Bs</h4>
+                                    </div>
                                 </div>
                             </div>
+                            <div class="row mb-0 mt-3 mt-lg-1">
+                                <div class="col col-0 col-lg-2 px-0">
+                                </div>
+                                <div class="col col-12 col-lg-5 my-auto ps-3 ps-lg-4 text-mute fs-6">
+                                    {{#if ../order}}
+                                        {{!-- <a href="/marketplace/product/cart_shopping/remove_product/{{id} }" ><i class="fa-solid fa-trash"></i></a> --}}
+                                    {{else}}
+                                        <a class="text-muted" href="/marketplace/product/cart_shopping/remove_product/{{id}}">
+                                            <i class="fa-regular fa-trash-can text-mute"></i> <h6 class="d-inline-block">Eliminar</h6>
+                                        </a>
+                                    {{/if}}
+                                </div>
+                            </div>
+                            <hr class="my-3">
                             {{/each}}
                         {{else}}
                             {{!-- content --}}
+                            <div class="col-md-10 mx-auto text-center pt-5">
+                                <div class="card card-body">
+                                    <h3>No hay ningún producto en el carrito </h2>
+                                    <a href="/marketplace"><h3>Añadir Producto</h3></a>
+                                </div>
+                            </div>
                         {{/if}}
-                        {{!-- <div class="row item">
-                            <div class="col col-5 col-sm-2 px-0">
-                                <img class="item-img" src="../images/arduino.jpg" alt="">
-                            </div>
-                            <div class="col col-7 col-sm-5 my-auto">
-                                <h2 class="">Arduino Uno</h2>
-                            </div>
-                            <div class="col col-5 col-sm-2 my-auto py-3 py-sm-0">
-                                <input type="number" min="1" max="50" value="1">
-                            </div>
-                            <div class="col col-5 col-sm-2 my-auto">
-                                <p class="my-auto">50 Bs</p>
-                            </div>
-                            <div class="col col-2 col-sm-1 my-auto">
-                                <a href="#"><i class="fa-solid fa-trash"></i></a>
-                            </div>
-                        </div>
-                        <div class="row item">
-                            <div class="col col-5 col-sm-2 px-0">
-                                <img class="item-img" src="../images/arduino.jpg" alt="">
-                            </div>
-                            <div class="col col-7 col-sm-5 my-auto">
-                                <h2 class="">Arduino Uno</h2>
-                            </div>
-                            <div class="col col-5 col-sm-2 my-auto py-3 py-sm-0">
-                                <input type="number" min="1" max="50" value="1">
-                            </div>
-                            <div class="col col-5 col-sm-2 my-auto">
-                                <p class="my-auto">50 Bs</p>
-                            </div>
-                            <div class="col col-2 col-sm-1 my-auto px-0">
-                                <a href="#"><i class="fa-solid fa-trash"></i></a>
-                            </div>
-                        </div> --}}
                     </div>
+
+                    {{!-- <hr> --}}
+                    <div class="container-fluid px-0">
+                        <div class="">
+                            <div class="row">
+                                <div class="col col-6"><h5 class=" me-auto">N° Artículos </h5></div>
+                                <div class="col col-6 text-end"><h5 class="">{{n_products}} artículos</h5></div>
+                            </div>
+                            <div class="row">
+                                <div class="col col-6"><h5 class="">SubTotal </h5></div>
+                                <div class="col col-6 text-end"><h5 class="">{{total_cash}} Bs</h5></div>
+                            </div>
+                            {{!-- <div class="row">
+                                <div class="col col-6"><h5 class="">IVA </h5></div>
+                                <div class="col col-6 text-end"><h5 class="">0 Bs</h5></div>
+                            </div> --}}
+                            <div class="row">
+                                <div class="col col-6"><h5 class="bold" style="font-weight: bold;">Total </h5></div>
+                                <div class="col col-6 text-end"><h5 style="font-weight: bold;" class="">{{total_cash}} Bs</h5></div>
+                            </div>
+                        </div>    
+                    </div>
+                    <hr>
                 </div>
+
+                {{!-- order details --}}
+
                 <div class="col col-12 col-lg-4 text-start px-lg-3">
                     <div class="container-fluid calculus-container">
                         <p class="d-inline-block me-auto">N° Artículos: </p>
