--- a/views/marketplace/cart_shopping.hbs
+++ b/views/marketplace/cart_shopping.hbs
@@ -20,6 +20,9 @@
     <script src="https://kit.fontawesome.com/8faedc4425.js" crossorigin="anonymous"></script>
     
     <link rel="stylesheet" href="/css/styles_car_shopping.css">
+    
+    <!-- jquery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 </head>
 <body>
     <!-- navbar -->
@@ -108,6 +111,7 @@
                                     </div>
                                     <div class="row">
                                         <h5 class="my-auto">{{price}} Bs</h4>
+                                        <input type="number" id="price_{{id}}" class="d-none" value="{{price}}">
                                     </div>
                                 </div>
                                 <div class="col col-4 col-lg-2 py-sm-0 px-0">
@@ -118,11 +122,9 @@
                                         <input name="product_id" type="number" value="{{id}}" class="d-none">
                                         {{!-- <input name="quantity" type="number" min="1" max="50" value="{{quantity} }"> --}} 
                                         <div class="input-group py-auto my-auto text-center" bis_skin_checked="1">
-                                            <form action="/marketplace/cart_shopping/update_quantity" method="post">
-                                                <button style="min-width: 1rem" class="btn btn-decrement btn-outline-secondary px-2 px-sm-3" type="submit" name="action" value="decrement"><strong>−</strong></button>
-                                                <input type="number" inputmode="decimal" min="1" max="50" name="quantity" value="{{quantity}}" style="text-align: center; max-width: 4rem" class="form-control px-2 px-sm-2" placeholder="">
-                                                <button style="min-width: 1rem" class="btn btn-increment btn-outline-secondary px-2 px-sm-3" type="submit" name="action" value="increment"><strong>+</strong></button>
-                                            </form>
+                                            <button style="min-width: 1rem" class="btn btn-decrement btn-outline-secondary px-2 px-sm-3" type="button" id="{{id}}" name="action" value="decrement"><strong>−</strong></button>
+                                            <input type="number" inputmode="decimal" min="1" max="50" id="i{{id}}" name="quantity" value="{{quantity}}" style="text-align: center; max-width: 4rem" class="form-control px-2 px-sm-2" placeholder="">
+                                            <button style="min-width: 1rem" class="btn btn-increment btn-outline-secondary px-2 px-sm-3" type="button" id="{{id}}" name="action" value="increment"><strong>+</strong></button>
                                         </div>
                                     </div>
                                 </div>
@@ -131,7 +133,7 @@
                                         <h6>Total</h6>
                                     </div>
                                     <div class="row">
-                                        <h5 class="my-auto">{{price}} Bs</h4>
+                                        <h5 class="my-auto" id="total_{{id}}">{{price}} Bs</h4>
                                     </div>
                                 </div>
                             </div>
@@ -227,7 +229,7 @@
         crossorigin="anonymous"></script>
     
     <!-- js custom -->
-    <script src="../js/market.js"></script>
+    <script src="/js/in_dec.js"></script>
 
 </body>
 </html>
