total product calculation implemented in cart_shopping page

--- a/views/marketplace/cart_shopping.hbs
+++ b/views/marketplace/cart_shopping.hbs
@@ -133,7 +133,7 @@
                                         <h6>Total</h6>
                                     </div>
                                     <div class="row">
-                                        <h5 class="my-auto" id="total_{{id}}">{{price}} Bs</h4>
+                                        <h5 class="my-auto" id="total_{{id}}">{{total}} Bs</h4>
                                     </div>
                                 </div>
                             </div>
